admin/resources/css/spa-admin.css
/* ... */
.spMobileTableData .column-more .row-actions {
    position: absolute;
    left: 25px;
    top: -20px;
}
.sf-dropdown-cur {
    background-color: #EAF0F4;
    padding: 15px;
    font-weight: 600;
}
.sf-hide-full{
    display: none;
}
#sf-root-wrap #members-filter .check-column input[type=checkbox]{
    float: none;
    margin-top: 0;
}
@media screen and ( max-width: 1350px ) {
    #sfmaincontainer .sf-panel-body .sf-half {
        width: 100%!important;
    }
    #sfgroupnew .sf-panel-body .sf-half-form {
        width: 100%!important;
    }
    .spThemeContainer .spTheme {
        width: 49%;
        margin-left: 2%;
        margin-bottom: 15px;
    }


    .spThemeContainer .spTheme:nth-child(odd) {
        clear:both;
    }

    .spThemeContainer .spTheme:nth-child(3n+1) {
        clear:none;
    }

    .spThemeContainer .spTheme:nth-child(3n-2){
        margin-left:2%;
    }

    .spThemeContainer .spTheme:nth-child(2n-1) {
        margin-left: 0%;
    }
}
@media screen and ( max-width: 1110px ) {
    #sfrolenew .sf-half-panel {
        min-width: 100%!important;
    }
}
/* ... */

